# Dansdata

./: .all-contributorsrc  .editorconfig  .lintstagedrc.yml  .prettierignore  README.md  justfile  package-lock.json  package.json  tsconfig.json
.github/workflows/: backstage-pull_request-verify.yml  backstage-push-verify.yml  database-verify.yml
brand/: README.md
brand/animation/: dancers_loading.riv
components/api/backstage/: .lintstagedrc.mjs  README.md  _.justfile  gradlew  settings.gradle.kts
components/api/backstage/app/: build.gradle.kts
components/api/backstage/buildSrc/: build.gradle.kts  settings.gradle.kts
components/api/backstage/gradle/: libs.versions.toml
components/api/database/: .gitignore  Dockerfile  README.md  migrate.sh  migrate_2024-10-27T23_55_10.sql  migrate_latest.sql  seed.sql
components/api/database/docker-entrypoint-initdb.d/: 10_create_system_roles.sql  12_create_db_owner_user.sh  99_initial_migrate.sh  (+2 more)
components/db/: Dockerfile
components/db/docker-entrypoint-initdb.d/: 13_create_app_shuffle_user.sh  20_create_application_database.sh
components/shuffle/: .dockerignore  .gitignore  .lintstagedrc.yml  Cargo.toml  README.md  build.rs  dev.Dockerfile  release.Dockerfile
components/shuffle/.sqlx/: query-967c1d7f760dbfc8b0f49c5dfb5b0c5051bc47a71209260752175b8e9d2dd489.json  query-98bc9935ee38deafeb18401ecee855dd5f986b6ca8714087450233de550c5ccc.json
components/shuffle/migrations/: 20241225191730_create-schema.sql  20241225191839_create-table-bands.sql  20241225194429_create-table-venues.sql  20241225195021_create-table-events.sql  20241225201037_create-relation-event-bands.sql
components/shuffle/src/: logging.rs  main.rs
components/shuffle/src/domain/: band.rs  event.rs  mod.rs  venue.rs
components/shuffle/src/env/: mod.rs
components/shuffle/src/graphql/: band.rs  mod.rs  query.rs  testing.rs
components/shuffle/src/persistence/: config.rs  mod.rs
components/shuffle/src/persistence/bands/: entity.rs  mod.rs  repository.rs  select_all.sql  select_by_id.sql
components/shuffle/src/server/: mod.rs
components/shuffle/src/server/api_errors/: method_not_allowed.rs  mod.rs  not_found.rs  unknown_internal_server_error.rs
components/shuffle/src/server/routes/: graphql.rs  mod.rs
infra/docker/: docker-compose.db.dev.yml  docker-compose.release.yml  docker-compose.shuffle.dev.yml  docker-compose.yml
(+119 files in other folders)
