[package]
name = "shuffle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
built = { version = "0.7.5", features = ["chrono"] }
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["trace", "metrics", "logs", "serialize", "tonic"] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
opentelemetry-stdout = "0.27.0"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }

[build-dependencies]
built = { version = "0.7.5", features = ["git2", "chrono"] }
