[package]
name = "shuffle"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.13", features = ["graphiql", "playground", "tracing", "opentelemetry", "chrono"] }
async-graphql-axum = "7.0.13"
async-trait = "0.1.83"
axum = "0.7.9"
built = { version = "0.7.5", features = ["chrono"] }
chrono = "0.4.39"
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["trace", "metrics", "logs", "serialize", "tonic"] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
opentelemetry-stdout = "0.27.0"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = "0.3.19"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["chrono", "migrate", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
assertor = "0.0.3"

[build-dependencies]
built = { version = "0.7.5", features = ["git2", "chrono"] }
